Further styling added to services section so all its elements align correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,16 +188,28 @@ header {
     border-radius: 5px;
     display: inline-block;
     width: 30%;
-    min-width: 305px;
+    min-width: 320px;
+    min-height: 140px;
     margin: 1rem;
     padding: 1rem;
+    vertical-align: middle;
+}
+
+.services p {
+    min-width: 285px;
+    min-height: 80px;
+}
+
+.services-list-container {
+    padding: 2rem;
 }
 
 .left-list,
 .right-list {
     display: inline-block;
-    margin: 2rem;
+    margin: 0 2rem;
     text-align: left;
+    min-width: 250px;
 }
 
 /* Testimonials Section */
